# fastapi-boilerplate

./: .gitignore  Dockerfile  README.md  compose.yaml  hello.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
tests/: test_main.py
