[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.2",
]

[tool.mypy]
disallow_untyped_defs = true
warn_unused_configs = true

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "mypy>=1.11.2",
    "pytest>=8.3.2",
]
